# YAHVM

./: .gitignore  Cargo.toml  README.md  doc.md  example.asm
benches/: benchmark.rs
examples/: basic.asm  fib.asm
exe/: asm_to_bin  bin_to_asm
src/: assembler.rs  main.rs  test.rs  vm.rs  vm_runner.rs
src/vm/: var.rs
test/: basic_test.asm  extension_test.asm  jump_test.asm  label_test.asm  prime.asm  print_test.asm  set_test.asm
