[package]
name = "RD-18"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }

[[bin]]
name="rb18-asm"
path="src/main.rs"

[[bin]]
name="rb18"
path="src/vm.rs"
