[package]
name = "yahvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy = "0.0.302"
phf = { version = "0.11", features = ["macros"] }
regex = "1.7.3"
substring = "1.4.5"

[dev-dependencies]
criterion = "0.3"

[[bin]]
name="yahvm-asm"
path="src/assembler.rs"

[[bin]]
name="yahvm"
path="src/vm.rs"

[[bench]]
name = "benchmark"
harness = false
